feat(transform): Allow converting string to float as resource.Quantity
Signed-off-by: Maximilian Blatt <maximilian.blatt-extern@deutschebahn.com>
(external expert on behalf of DB Netz AG)

--- a/cluster/crds/apiextensions.crossplane.io_compositionrevisions.yaml
+++ b/cluster/crds/apiextensions.crossplane.io_compositionrevisions.yaml
@@ -182,6 +182,15 @@ spec:
                                   description: Convert is used to cast the input into
                                     the given output type.
                                   properties:
+                                    format:
+                                      description: "The expected input format. \n
+                                        * `quantity` - parses the input as a K8s [`resource.Quantity`](https://pkg.go.dev/k8s.io/apimachinery/pkg/api/resource#Quantity).
+                                        Only used during `string -> float64` conversions.
+                                        \n If this property is null, the default conversion
+                                        is applied."
+                                      enum:
+                                      - quantity
+                                      type: string
                                     toType:
                                       description: ToType is the type of the output
                                         of this transform.
@@ -544,6 +553,15 @@ spec:
                                   description: Convert is used to cast the input into
                                     the given output type.
                                   properties:
+                                    format:
+                                      description: "The expected input format. \n
+                                        * `quantity` - parses the input as a K8s [`resource.Quantity`](https://pkg.go.dev/k8s.io/apimachinery/pkg/api/resource#Quantity).
+                                        Only used during `string -> float64` conversions.
+                                        \n If this property is null, the default conversion
+                                        is applied."
+                                      enum:
+                                      - quantity
+                                      type: string
                                     toType:
                                       description: ToType is the type of the output
                                         of this transform.
@@ -971,6 +989,15 @@ spec:
                                   description: Convert is used to cast the input into
                                     the given output type.
                                   properties:
+                                    format:
+                                      description: "The expected input format. \n
+                                        * `quantity` - parses the input as a K8s [`resource.Quantity`](https://pkg.go.dev/k8s.io/apimachinery/pkg/api/resource#Quantity).
+                                        Only used during `string -> float64` conversions.
+                                        \n If this property is null, the default conversion
+                                        is applied."
+                                      enum:
+                                      - quantity
+                                      type: string
                                     toType:
                                       description: ToType is the type of the output
                                         of this transform.
@@ -1333,6 +1360,15 @@ spec:
                                   description: Convert is used to cast the input into
                                     the given output type.
                                   properties:
+                                    format:
+                                      description: "The expected input format. \n
+                                        * `quantity` - parses the input as a K8s [`resource.Quantity`](https://pkg.go.dev/k8s.io/apimachinery/pkg/api/resource#Quantity).
+                                        Only used during `string -> float64` conversions.
+                                        \n If this property is null, the default conversion
+                                        is applied."
+                                      enum:
+                                      - quantity
+                                      type: string
                                     toType:
                                       description: ToType is the type of the output
                                         of this transform.
