feat(transform): Add hash string conversion
Signed-off-by: Maximilian Blatt <maximilian.blatt-extern@deutschebahn.com>
(external expert on behalf of DB Netz AG)

--- a/cluster/crds/apiextensions.crossplane.io_compositionrevisions.yaml
+++ b/cluster/crds/apiextensions.crossplane.io_compositionrevisions.yaml
@@ -321,13 +321,21 @@ spec:
                                   string.
                                 properties:
                                   convert:
-                                    description: Convert the type of conversion to
-                                      Upper/Lower case.
+                                    description: Optional conversion method to be
+                                      used. `ToUpper` and `ToLower` convert the letter
+                                      case of the input string. `ToBase64` and `FromBase64`
+                                      create / read a base64 representation of the
+                                      input value. `ToSha1`, `ToSha256` and `ToSha512`
+                                      generate a hash value based on the input converted
+                                      to JSON.
                                     enum:
                                     - ToUpper
                                     - ToLower
                                     - ToBase64
                                     - FromBase64
+                                    - ToSha1
+                                    - ToSha256
+                                    - ToSha512
                                     type: string
                                   fmt:
                                     description: Format the input using a Go format
@@ -605,13 +613,21 @@ spec:
                                     a string.
                                   properties:
                                     convert:
-                                      description: Convert the type of conversion
-                                        to Upper/Lower case.
+                                      description: Optional conversion method to be
+                                        used. `ToUpper` and `ToLower` convert the
+                                        letter case of the input string. `ToBase64`
+                                        and `FromBase64` create / read a base64 representation
+                                        of the input value. `ToSha1`, `ToSha256` and
+                                        `ToSha512` generate a hash value based on
+                                        the input converted to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
+                                      - ToSha1
+                                      - ToSha256
+                                      - ToSha512
                                       type: string
                                     fmt:
                                       description: Format the input using a Go format
@@ -971,13 +987,21 @@ spec:
                                     a string.
                                   properties:
                                     convert:
-                                      description: Convert the type of conversion
-                                        to Upper/Lower case.
+                                      description: Optional conversion method to be
+                                        used. `ToUpper` and `ToLower` convert the
+                                        letter case of the input string. `ToBase64`
+                                        and `FromBase64` create / read a base64 representation
+                                        of the input value. `ToSha1`, `ToSha256` and
+                                        `ToSha512` generate a hash value based on
+                                        the input converted to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
+                                      - ToSha1
+                                      - ToSha256
+                                      - ToSha512
                                       type: string
                                     fmt:
                                       description: Format the input using a Go format
@@ -1452,13 +1476,21 @@ spec:
                                   string.
                                 properties:
                                   convert:
-                                    description: Convert the type of conversion to
-                                      Upper/Lower case.
+                                    description: Optional conversion method to be
+                                      used. `ToUpper` and `ToLower` convert the letter
+                                      case of the input string. `ToBase64` and `FromBase64`
+                                      create / read a base64 representation of the
+                                      input value. `ToSha1`, `ToSha256` and `ToSha512`
+                                      generate a hash value based on the input converted
+                                      to JSON.
                                     enum:
                                     - ToUpper
                                     - ToLower
                                     - ToBase64
                                     - FromBase64
+                                    - ToSha1
+                                    - ToSha256
+                                    - ToSha512
                                     type: string
                                   fmt:
                                     description: Format the input using a Go format
@@ -1736,13 +1768,21 @@ spec:
                                     a string.
                                   properties:
                                     convert:
-                                      description: Convert the type of conversion
-                                        to Upper/Lower case.
+                                      description: Optional conversion method to be
+                                        used. `ToUpper` and `ToLower` convert the
+                                        letter case of the input string. `ToBase64`
+                                        and `FromBase64` create / read a base64 representation
+                                        of the input value. `ToSha1`, `ToSha256` and
+                                        `ToSha512` generate a hash value based on
+                                        the input converted to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
+                                      - ToSha1
+                                      - ToSha256
+                                      - ToSha512
                                       type: string
                                     fmt:
                                       description: Format the input using a Go format
@@ -2102,13 +2142,21 @@ spec:
                                     a string.
                                   properties:
                                     convert:
-                                      description: Convert the type of conversion
-                                        to Upper/Lower case.
+                                      description: Optional conversion method to be
+                                        used. `ToUpper` and `ToLower` convert the
+                                        letter case of the input string. `ToBase64`
+                                        and `FromBase64` create / read a base64 representation
+                                        of the input value. `ToSha1`, `ToSha256` and
+                                        `ToSha512` generate a hash value based on
+                                        the input converted to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
+                                      - ToSha1
+                                      - ToSha256
+                                      - ToSha512
                                       type: string
                                     fmt:
                                       description: Format the input using a Go format
