--- a/cluster/crds/apiextensions.crossplane.io_compositions.yaml
+++ b/cluster/crds/apiextensions.crossplane.io_compositions.yaml
@@ -322,12 +322,18 @@ spec:
                                       and `FromBase64` perform a base64 conversion
                                       based on the input string. `ToJson` converts
                                       any input value into its raw JSON representation.
+                                      `ToSha1`, `ToSha256` and `ToSha512` generate
+                                      a hash value based on the input converted to
+                                      JSON.
                                     enum:
                                     - ToUpper
                                     - ToLower
                                     - ToBase64
                                     - FromBase64
                                     - ToJson
+                                    - ToSha1
+                                    - ToSha256
+                                    - ToSha512
                                     type: string
                                   fmt:
                                     description: Format the input using a Go format
@@ -613,12 +619,18 @@ spec:
                                         and `FromBase64` perform a base64 conversion
                                         based on the input string. `ToJson` converts
                                         any input value into its raw JSON representation.
+                                        `ToSha1`, `ToSha256` and `ToSha512` generate
+                                        a hash value based on the input converted
+                                        to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
                                       - ToJson
+                                      - ToSha1
+                                      - ToSha256
+                                      - ToSha512
                                       type: string
                                     fmt:
                                       description: Format the input using a Go format
@@ -986,12 +998,18 @@ spec:
                                         and `FromBase64` perform a base64 conversion
                                         based on the input string. `ToJson` converts
                                         any input value into its raw JSON representation.
+                                        `ToSha1`, `ToSha256` and `ToSha512` generate
+                                        a hash value based on the input converted
+                                        to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
                                       - ToJson
+                                      - ToSha1
+                                      - ToSha256
+                                      - ToSha512
                                       type: string
                                     fmt:
                                       description: Format the input using a Go format
