fix(revision): Add missing ToJson types
Signed-off-by: Maximilian Blatt <maximilian.blatt-extern@deutschebahn.com>
(external expert on behalf of DB Netz AG)

--- a/cluster/crds/apiextensions.crossplane.io_compositionrevisions.yaml
+++ b/cluster/crds/apiextensions.crossplane.io_compositionrevisions.yaml
@@ -322,17 +322,20 @@ spec:
                                 properties:
                                   convert:
                                     description: Optional conversion method to be
-                                      used. `ToUpper` and `ToLower` convert the letter
-                                      case of the input string. `ToBase64` and `FromBase64`
-                                      create / read a base64 representation of the
-                                      input value. `ToSha1`, `ToSha256` and `ToSha512`
-                                      generate a hash value based on the input converted
-                                      to JSON.
+                                      specified. `ToUpper` and `ToLower` change the
+                                      letter case of the input string. `ToBase64`
+                                      and `FromBase64` perform a base64 conversion
+                                      based on the input string. `ToJson` converts
+                                      any input value into its raw JSON representation.
+                                      `ToSha1`, `ToSha256` and `ToSha512` generate
+                                      a hash value based on the input converted to
+                                      JSON.
                                     enum:
                                     - ToUpper
                                     - ToLower
                                     - ToBase64
                                     - FromBase64
+                                    - ToJson
                                     - ToSha1
                                     - ToSha256
                                     - ToSha512
@@ -614,17 +617,20 @@ spec:
                                   properties:
                                     convert:
                                       description: Optional conversion method to be
-                                        used. `ToUpper` and `ToLower` convert the
-                                        letter case of the input string. `ToBase64`
-                                        and `FromBase64` create / read a base64 representation
-                                        of the input value. `ToSha1`, `ToSha256` and
-                                        `ToSha512` generate a hash value based on
-                                        the input converted to JSON.
+                                        specified. `ToUpper` and `ToLower` change
+                                        the letter case of the input string. `ToBase64`
+                                        and `FromBase64` perform a base64 conversion
+                                        based on the input string. `ToJson` converts
+                                        any input value into its raw JSON representation.
+                                        `ToSha1`, `ToSha256` and `ToSha512` generate
+                                        a hash value based on the input converted
+                                        to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
+                                      - ToJson
                                       - ToSha1
                                       - ToSha256
                                       - ToSha512
@@ -988,17 +994,20 @@ spec:
                                   properties:
                                     convert:
                                       description: Optional conversion method to be
-                                        used. `ToUpper` and `ToLower` convert the
-                                        letter case of the input string. `ToBase64`
-                                        and `FromBase64` create / read a base64 representation
-                                        of the input value. `ToSha1`, `ToSha256` and
-                                        `ToSha512` generate a hash value based on
-                                        the input converted to JSON.
+                                        specified. `ToUpper` and `ToLower` change
+                                        the letter case of the input string. `ToBase64`
+                                        and `FromBase64` perform a base64 conversion
+                                        based on the input string. `ToJson` converts
+                                        any input value into its raw JSON representation.
+                                        `ToSha1`, `ToSha256` and `ToSha512` generate
+                                        a hash value based on the input converted
+                                        to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
+                                      - ToJson
                                       - ToSha1
                                       - ToSha256
                                       - ToSha512
@@ -1477,17 +1486,20 @@ spec:
                                 properties:
                                   convert:
                                     description: Optional conversion method to be
-                                      used. `ToUpper` and `ToLower` convert the letter
-                                      case of the input string. `ToBase64` and `FromBase64`
-                                      create / read a base64 representation of the
-                                      input value. `ToSha1`, `ToSha256` and `ToSha512`
-                                      generate a hash value based on the input converted
-                                      to JSON.
+                                      specified. `ToUpper` and `ToLower` change the
+                                      letter case of the input string. `ToBase64`
+                                      and `FromBase64` perform a base64 conversion
+                                      based on the input string. `ToJson` converts
+                                      any input value into its raw JSON representation.
+                                      `ToSha1`, `ToSha256` and `ToSha512` generate
+                                      a hash value based on the input converted to
+                                      JSON.
                                     enum:
                                     - ToUpper
                                     - ToLower
                                     - ToBase64
                                     - FromBase64
+                                    - ToJson
                                     - ToSha1
                                     - ToSha256
                                     - ToSha512
@@ -1769,17 +1781,20 @@ spec:
                                   properties:
                                     convert:
                                       description: Optional conversion method to be
-                                        used. `ToUpper` and `ToLower` convert the
-                                        letter case of the input string. `ToBase64`
-                                        and `FromBase64` create / read a base64 representation
-                                        of the input value. `ToSha1`, `ToSha256` and
-                                        `ToSha512` generate a hash value based on
-                                        the input converted to JSON.
+                                        specified. `ToUpper` and `ToLower` change
+                                        the letter case of the input string. `ToBase64`
+                                        and `FromBase64` perform a base64 conversion
+                                        based on the input string. `ToJson` converts
+                                        any input value into its raw JSON representation.
+                                        `ToSha1`, `ToSha256` and `ToSha512` generate
+                                        a hash value based on the input converted
+                                        to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
+                                      - ToJson
                                       - ToSha1
                                       - ToSha256
                                       - ToSha512
@@ -2143,17 +2158,20 @@ spec:
                                   properties:
                                     convert:
                                       description: Optional conversion method to be
-                                        used. `ToUpper` and `ToLower` convert the
-                                        letter case of the input string. `ToBase64`
-                                        and `FromBase64` create / read a base64 representation
-                                        of the input value. `ToSha1`, `ToSha256` and
-                                        `ToSha512` generate a hash value based on
-                                        the input converted to JSON.
+                                        specified. `ToUpper` and `ToLower` change
+                                        the letter case of the input string. `ToBase64`
+                                        and `FromBase64` perform a base64 conversion
+                                        based on the input string. `ToJson` converts
+                                        any input value into its raw JSON representation.
+                                        `ToSha1`, `ToSha256` and `ToSha512` generate
+                                        a hash value based on the input converted
+                                        to JSON.
                                       enum:
                                       - ToUpper
                                       - ToLower
                                       - ToBase64
                                       - FromBase64
+                                      - ToJson
                                       - ToSha1
                                       - ToSha256
                                       - ToSha512
