--- a/cluster/meta/meta.pkg.crossplane.io_providers.yaml
+++ b/cluster/meta/meta.pkg.crossplane.io_providers.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
+    controller-gen.kubebuilder.io/version: v0.11.1
   creationTimestamp: null
   name: providers.meta.pkg.crossplane.io
 spec:
@@ -54,7 +54,8 @@ spec:
                           description: APIGroups is the name of the APIGroup that
                             contains the resources.  If multiple API groups are specified,
                             any action requested against one of the enumerated resources
-                            in any API group will be allowed.
+                            in any API group will be allowed. "" represents the core
+                            API group and "*" represents all API groups.
                           items:
                             type: string
                           type: array
@@ -174,7 +175,8 @@ spec:
                           description: APIGroups is the name of the APIGroup that
                             contains the resources.  If multiple API groups are specified,
                             any action requested against one of the enumerated resources
-                            in any API group will be allowed.
+                            in any API group will be allowed. "" represents the core
+                            API group and "*" represents all API groups.
                           items:
                             type: string
                           type: array
@@ -255,9 +257,3 @@ spec:
         type: object
     served: true
     storage: false
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
