--- a/cluster/webhookconfigurations/manifests.yaml
+++ b/cluster/webhookconfigurations/manifests.yaml
@@ -11,6 +11,26 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /validate-apiextensions-crossplane-io-v1-composition
+  failurePolicy: Fail
+  name: compositions.apiextensions.crossplane.io
+  rules:
+  - apiGroups:
+    - apiextensions.crossplane.io
+    apiVersions:
+    - v1
+    operations:
+    - UPDATE
+    - CREATE
+    resources:
+    - compositions
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
       path: /validate-apiextensions-crossplane-io-v1-compositeresourcedefinition
   failurePolicy: Fail
   name: compositeresourcedefinitions.apiextensions.crossplane.io
